# fast-wfc

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NREADME.md  README.md  fast_wfc.h  main.cpp  makefile  samples.xml
lib/: all.h
src/: propagator.cpp  wave.cpp  wfc.cpp
src/headers/: overlapping_wfc.h  propagator.h  tiling_wfc.h  wave.h  wfc.h
src/headers/model/: array2D.h  array3D.h  color.h
src/include/: direction.h  direction.hpp  overlapping_wfc.h  overlapping_wfc.hpp  propagator.h  propagator.hpp  tiling_wfc.h  tiling_wfc.hpp  wave.h  wave.hpp  wfc.h  wfc.hpp
src/include/utils/: array2D.h  array2D.hpp  array3D.h  array3D.hpp
src/lib/: propagator.cpp  wave.cpp  wfc.cpp
